install predefined symbols

--- a/assembler/makefile
+++ b/assembler/makefile
@@ -1,4 +1,7 @@
-OBJECTS = scanner.o parser.o
+OBJECTS = scanner.o parser.o parser_util.o symbol_table.o
+
+PARSER_UTIL_C = parser_util/parser_util.c
+SYM_TAB_C = symbol_table/symbol_table.c
 
 exe: ${OBJECTS}
 	gcc -o exe ${OBJECTS}
@@ -9,11 +12,17 @@ scanner.o: scanner.c
 scanner.c: scanner.l parser.tab.h
 	flex --outfile=scanner.c $<
 
-parser.o: parser.tab.c
+parser.o: parser.tab.c parser_util.o
 	gcc -c $< -o $@
 
 parser.tab.c parser.tab.h: parser.y
 	bison -d $<
+
+parser_util.o: ${PARSER_UTIL_C} symbol_table.o
+	gcc -c $< -o $@
+
+symbol_table.o: ${SYM_TAB_C}
+	gcc -c $< -o $@
 
 clean:
 	rm -f exe scanner.c ${OBJECTS} parser.tab.c parser.tab.h
