implement vm arithmetic/logical commands translation

--- a/vm_translator/Makefile
+++ b/vm_translator/Makefile
@@ -1,9 +1,10 @@
-CLFAGS = -Isrc -Isrc/parser_util -Isrc/codegen
+CLFAGS = -Isrc -Isrc/parser_util -Isrc/codegen/include
 
 OBJECTS = 	build/parser.o \
 			build/scanner.o \
 			build/parser_util.o \
-			build/memory_codegen.o
+			build/memory_codegen.o \
+			build/compute_codegen.o
 
 all: build/vmtranslator
 
@@ -16,10 +17,13 @@ build/parser.o: build/parser.tab.c
 build/scanner.o: build/scanner.c
 	gcc ${CLFAGS} -c $< -o $@
 
-build/memory_codegen.o: src/codegen/memory_codegen.c
+build/memory_codegen.o: src/codegen/src/memory_codegen.c
 	gcc ${CLFAGS} -c $< -o $@
 
-build/parser_util.o: src/parser_util/parser_util.c src/codegen/memory_codegen.h build/memory_codegen.o
+build/compute_codegen.o: src/codegen/src/compute_codegen.c
+	gcc ${CLFAGS} -c $< -o $@
+
+build/parser_util.o: src/parser_util/parser_util.c src/codegen/include/memory_codegen.h build/compute_codegen.o
 	gcc ${CLFAGS} -c $< -o $@
 
 build/parser.tab.c build/parser.tab.h: src/parser.y
