implement class name collection and type validation

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -32,7 +32,7 @@ ROUTINE_SYMTAB_DEP = ${ROUTINE_SYMTAB_C} ${SAFEUTIL_H}
 FILEUTIL_PATH 	= src/file_util
 FILEUTIL_H 		= ${FILEUTIL_PATH}/file_util.h
 FILEUTIL_C 		= ${FILEUTIL_PATH}/file_util.c
-FILEUTIL_DEP 	= ${FILEUTIL_C} ${FILEUTIL_H} ${SAFEUTIL_H}
+FILEUTIL_DEP 	= ${FILEUTIL_C} ${FILEUTIL_H} ${SAFEUTIL_H} ${STRUTIL_H}
 
 STRUTIL_PATH = src/str_util
 STRUTIL_H	 = ${STRUTIL_PATH}/str_util.h
